Use aggregation instead of inheritance